# dope

./: .gitignore  .gitmodules  README.md  catkin_make.sh  catkin_make_py2.sh  catkin_make_py3.sh  del.sh  environment.sh  image_compressed.sh  record_vr.sh  run_locobot.sh  set_ip.sh  set_rospackage_path.sh  set_wfh_workspace_env.sh  start_locobot.sh
Docker/NUC/point_cloud_streaming/: Dockerfile  build.sh  docker_run.sh
Docker/NUC/video_streaming/: docker_join.sh  docker_run.sh
Docker/NUC/vr/: Dockerfile  build.sh  docker_join.sh  docker_run.sh
ROS/catkin_ws/src/deep_grasping/: CMakeLists.txt  (+1 more)
ROS/catkin_ws/src/hand_eye_calibration/: CMakeLists.txt
ROS/catkin_ws/src/hand_eye_calibration/data/: arm0413_left.txt  arm0413_top.txt  arm0413_top_2.txt  arm20230411.txt  arm20230411_2.txt  test.txt
ROS/catkin_ws/src/hand_eye_calibration/launch/: cali_cam.launch  fake_tcp_publisher.launch
ROS/catkin_ws/src/hand_eye_calibration/src/: get_transform.cpp  static_cam_calibration.cpp  static_cam_left_calibration.cpp
ROS/procman/: start_locobot  start_vr
Tutorial/: 01_demo.md  02_how-to-run.md  P_Global_w_3DO.md  P_Global_w_VS.md  P_Local_w_3DO.md  P_Local_w_VS.md  S_setup_PUN.md  S_setup_VR.md  S_setup_locobot.md
Unity/GMU-Oculus-VR-locobot/: README.md
Unity/GMU-Oculus-VR-locobot/ProjectSettings/: ProjectSettings.asset  TagManager.asset
catkin_ws/devel/: .catkin  local_setup.sh
catkin_ws/src/dope_pose/: CMakeLists.txt
quick_start/: bundle_calibration_setup.sh  calibration_left.sh  calibration_top.sh  navigation_setup.sh  terminal2.sh  terminal3.sh  terminal4.sh
(+235 files in other folders)
